@@ -211,6 +211,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/Rect.html#unionall>Rect.unionall</a> - rectangle covering all inputs<br>
 <a href=ref/Rect.html#unionall_ip>Rect.unionall_ip</a> - rectangle covering all inputs<br>
 <a href=ref/Sound.html#fadeout>Sound.fadeout</a> - fadeout all channels playing this sound<br>
+<a href=ref/Sound.html#get_length>Sound.get_length</a> - get the length of the Sound in seconds.<br>
 <a href=ref/Sound.html#get_num_channels>Sound.get_num_channels</a> - number of channels with sound<br>
 <a href=ref/Sound.html#get_volume>Sound.get_volume</a> - query volume for sound<br>
 <a href=ref/Sound.html#play>Sound.play</a> - play sound<br>
@@ -284,6 +285,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_display.html#get_driver>display.get_driver</a> - get the current sdl video driver<br>
 <a href=ref/pygame_display.html#get_init>display.get_init</a> - get status of display module initialization<br>
 <a href=ref/pygame_display.html#get_surface>display.get_surface</a> - get current display surface<br>
+<a href=ref/pygame_display.html#get_wm_info>display.get_wm_info</a> - get settings from the system window manager<br>
 <a href=ref/pygame_display.html#gl_get_attribute>display.gl_get_attribute</a> - get special OPENGL attributes<br>
 <a href=ref/pygame_display.html#gl_set_attribute>display.gl_set_attribute</a> - set special OPENGL attributes<br>
 <a href=ref/pygame_display.html#iconify>display.iconify</a> - minimize the display window<br>
